# python-library-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTRUCTIONS.md  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: check_release_notes.yaml  ci.yaml  publish_pypi.yaml
{{cookiecutter.project_slug}}/examples/: print_version.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/tests/unit/: test_init.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  exceptions.py
